29-10-2025/private-api-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-api
  namespace: private-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: private-api
  template:
    metadata:
      labels:
        app: private-api
    spec:
      containers:
      - name: private-api
        image: kishorek003/private-api:latest   
        ports:
        - containerPort: 4000
