29-10-2025/private-api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-api
  namespace: private-namespace
spec:
  selector:
    app: private-api
  ports:
    - port: 80
      targetPort: 4000
  type: NodePort
